# petclinic

./: .dockerignore  Cargo.nix  Cargo.toml  Dockerfile  README.md  docker-compose.yml  flake.nix
migrations/2023-02-23-064503_initial_setup.sql/: down.sql  up.sql
petclinic_config/: development.toml  docker.toml  production.toml  qa.toml
src/: context.rs  main.rs  settings.rs
src/db/: mod.rs  schema.rs  sqlite.rs
src/db/models/: mod.rs  pet.rs  user.rs  vet.rs  visit.rs
src/handlers/: auth.rs  home.rs  pets.rs  vets.rs
src/logic/: users.rs
templates/vet/: list.html
